| Bug #14271 | I_S: columns has no size for (var)binary columns | ||
|---|---|---|---|
| Submitted: | 24 Oct 2005 20:43 | Modified: | 21 Dec 2005 18:54 |
| Reporter: | Mark Matthews | ||
| Status: | Closed | ||
| Category: | Server | Severity: | S3 (Non-critical) |
| Version: | 5.0.15 | OS: | Any (All) |
| Assigned to: | Sergey Gluhov | Target Version: | |
[28 Oct 2005 14:13]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/31617
[8 Dec 2005 11:28]
Alexander Barkov
This one seems ok to push for me.
[19 Dec 2005 13:15]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/247
[19 Dec 2005 13:17]
Sergey Gluhov
Fixed in 5.0.18
[21 Dec 2005 18:54]
Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
Documented bugfix in 5.0.18 changelog. Closed.

Description: The information_schema.columns table reports no size for the (var)binary datatypes. How to repeat: CREATE TABLE testBug12970 (binary_field BINARY(32), varbinary_field VARBINARY(64)); select * from INFORMATION_SCHEMA.columns WHERE table_name='testBug12970'\G; *************************** 1. row *************************** TABLE_CATALOG: NULL TABLE_SCHEMA: test TABLE_NAME: testBug12970 COLUMN_NAME: binary_field ORDINAL_POSITION: 1 COLUMN_DEFAULT: NULL IS_NULLABLE: YES DATA_TYPE: binary CHARACTER_MAXIMUM_LENGTH: NULL CHARACTER_OCTET_LENGTH: NULL NUMERIC_PRECISION: NULL NUMERIC_SCALE: NULL CHARACTER_SET_NAME: NULL COLLATION_NAME: NULL COLUMN_TYPE: binary(32) COLUMN_KEY: EXTRA: PRIVILEGES: select,insert,update,references COLUMN_COMMENT: *************************** 2. row *************************** TABLE_CATALOG: NULL TABLE_SCHEMA: test TABLE_NAME: testBug12970 COLUMN_NAME: varbinary_field ORDINAL_POSITION: 2 COLUMN_DEFAULT: NULL IS_NULLABLE: YES DATA_TYPE: varbinary CHARACTER_MAXIMUM_LENGTH: NULL CHARACTER_OCTET_LENGTH: NULL NUMERIC_PRECISION: NULL NUMERIC_SCALE: NULL CHARACTER_SET_NAME: NULL COLLATION_NAME: NULL COLUMN_TYPE: varbinary(64) COLUMN_KEY: EXTRA: PRIVILEGES: select,insert,update,references COLUMN_COMMENT: