Fix for bug#14271 I_S: columns has no size for (var)binary columns   set character_octet_length, character_maximum_length for   binary and varbinary field types

mysql-test/r/information_schema.result:
  Fix for bug#14271 I_S: columns has no size for (var)binary columns
    test case
mysql-test/t/information_schema.test:
  Fix for bug#14271 I_S: columns has no size for (var)binary columns
    test case